# prompt-sphere

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml
backend/: .black.toml  .env.example  .flake8  .isort.cfg  Dockerfile  README.md  TESTING.md  benchmark_example.py  debug_tests.py  main.py  pyproject.toml  quick_test.py  requirements.txt  run_pytest.py  run_simple_test.py  simple_benchmark.py  simple_test.py  test_peqa_basic.py  test_redis_integration.py  validate_stream_d.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/base/: __init__.py  base_agent.py  message_types.py  orchestrator.py
backend/app/agents/config/: __init__.py  agent_config.py
backend/app/agents/pe_engineer/: PEEngineerAgent.py  PromptOptimizer.py  RequirementsParser.py  __init__.py  config.py  types.py
backend/app/agents/peqa/: BenchmarkRunner.py  ImprovementEngine.py  PEQAAgent.py  QualityScorer.py  ReportGenerator.py  __init__.py  config.py  types.py
backend/app/api/: __init__.py  health.py
backend/app/api/v1/: dashscope.py  endpoints.py  router.py
backend/app/auth/: __init__.py  dingtalk.py  exceptions.py  jwt.py  middleware.py  oauth.py  tokens.py
backend/app/core/: cache.py  config.py  dependencies.py  redis.py  security.py  sessions.py
backend/app/dashscope/: __init__.py  auth.py  client.py  config.py  exceptions.py  models.py  rate_limiter.py  retry.py
backend/app/dependencies/: __init__.py  dashscope.py
backend/app/middleware/: __init__.py  rate_limiter.py  security_headers.py
backend/app/models/: prompt.py  tokens.py  user.py
backend/app/services/: __init__.py  base.py  dashscope_service.py  role.py  session.py  user.py
backend/app/tasks/: __init__.py  cleanup.py
backend/app/tests/agents/: __init__.py  test_base_agent.py  test_orchestrator.py  (+1 more)
backend/core/: database.py
backend/database/: connection.py  migrate.py  migration_base.py  migration_manager.py  migration_tracker.py  session.py
backend/database/migrations/: 20250922_000001_create_users_table.py  20250922_000002_create_templates_table.py  20250922_000003_create_prompts_table.py  20250922_000004_create_conversations_table.py  20250922_000005_create_audit_logs_table.py
backend/database/models/: __init__.py  audit_log.py  base.py  conversation.py  prompt.py  prompt_version.py  template.py  user.py
backend/database/repositories/: __init__.py  audit_log_repository.py  base.py  conversation_repository.py  prompt_repository.py  template_repository.py  user_repository.py
backend/database/schema/: init.sql  migrate.sql
backend/src/: __init__.py
backend/src/dashscope/: __init__.py  config.py  models.py
backend/tests/: README_TESTING.md  __init__.py  conftest.py  test_agents_pe_engineer.py  test_agents_peqa.py  test_api.py  test_api_endpoints.py  test_api_health.py  test_api_models.py  test_auth_endpoints.py  test_cleanup_tasks.py  test_config.py  test_core_database.py  test_core_dependencies.py  test_dashscope.py  test_dashscope_api.py  test_dashscope_api_integration.py  test_dashscope_config.py  test_dashscope_service.py  test_database.py  test_database_connection.py  test_database_integration.py  test_database_session.py  test_migrations.py  test_models.py  test_prompt_optimizer.py  test_repositories.py  test_requirements_parser.py  test_role_service.py  test_services_base.py  test_session_service.py  test_stream_d_integration.py  test_user_service.py
backend/tests/fixtures/: __init__.py  audit_log_fixtures.py  conversation_fixtures.py  pe_engineer_fixtures.py  peqa_fixtures.py  prompt_fixtures.py  template_fixtures.py  user_fixtures.py
src/: App.css  (+2 more)
(+216 files in other folders)
